--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="FairCall — offline-first random calling and participation tracking for fair, trackable classroom participation.">
-  <title>FairCall — Fair, fast classroom participation</title>
+  <meta name="description" content="FairCall — Fair classroom participation without slowing your lesson. Offline-first random calling and one-tap participation logging for teachers.">
+  <title>FairCall — Fair classroom participation without slowing your lesson</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="site-header" role="banner">
     <div class="container header-inner">
       <a href="#" class="logo" aria-label="FairCall home">
-        <img src="assets/logo.png" alt="FairCall logo" width="40" height="40" class="logo-img">
-        <span class="logo-text">FairCall</span>
+        <img src="assets/logo.png" alt="FairCall" width="58" height="58" class="logo-img">
       </a>
       <button type="button" class="nav-toggle" aria-label="Toggle menu" aria-expanded="false" aria-controls="main-nav">
         <span class="nav-toggle-bar"></span>
@@ -21,13 +20,14 @@
       </button>
       <nav id="main-nav" class="main-nav" aria-label="Main navigation">
         <ul class="nav-list">
+          <li><a href="#why-it-matters">Why</a></li>
           <li><a href="#features">Features</a></li>
           <li><a href="#screenshots">Screenshots</a></li>
           <li><a href="#how-it-works">How it works</a></li>
           <li><a href="#pricing">Pricing</a></li>
           <li><a href="#faq">FAQ</a></li>
         </ul>
-        <a href="#cta" class="btn btn-primary nav-cta">Get the app</a>
+        <a href="#get" class="btn btn-primary nav-cta">Try FairCall</a>
       </nav>
     </div>
   </header>
@@ -35,17 +35,20 @@
   <main>
     <section class="hero" aria-labelledby="hero-heading">
       <div class="container">
-        <h1 id="hero-heading">Fair, fast classroom participation.</h1>
-        <p class="hero-subhead">Offline-first random calling + participation tracking — built for real classrooms.</p>
+        <h1 id="hero-heading">Fair classroom participation — without slowing your lesson.</h1>
+        <p class="hero-subhead">Offline-first random calling and one-tap participation logging that helps you include quieter students.</p>
         <div class="hero-actions">
-          <a href="#screenshots" class="btn btn-primary">See screenshots</a>
-          <a href="#how-it-works" class="btn btn-secondary">How it works</a>
+          <a href="#get" class="btn btn-primary">Try FairCall</a>
+          <a href="#screenshots" class="btn btn-secondary">See how it works</a>
         </div>
-        <ul class="hero-trust">
-          <li><span class="trust-icon">📴</span> Offline-first</li>
-          <li><span class="trust-icon">⚖️</span> Fairness logic</li>
-          <li><span class="trust-icon">✓</span> Works in-session</li>
-        </ul>
+        <p class="hero-trust-line">Works offline • No student data leaves your device • Built for real classrooms</p>
+      </div>
+    </section>
+
+    <section id="why-it-matters" class="why-it-matters" aria-labelledby="why-heading">
+      <div class="container">
+        <h2 id="why-heading">Why it matters</h2>
+        <p class="why-body">In most classes, a few voices dominate. Quiet students disappear — not intentionally, just by habit. FairCall makes participation visible, so you can balance it.</p>
       </div>
     </section>
 
@@ -86,44 +89,23 @@
 
     <section id="features" class="features" aria-labelledby="features-heading">
       <div class="container">
-        <h2 id="features-heading">Features</h2>
-        <p class="section-lead">Everything you need for fair, trackable participation.</p>
-        <div class="feature-grid">
+        <h2 id="features-heading">Benefits</h2>
+        <div class="feature-grid feature-grid-compact">
           <article class="feature-card">
-            <h3>One-tap pick</h3>
-            <p>Random cold call at the tap of a button. No dice, no sticks.</p>
+            <h3>One-tap logging</h3>
+            <p>Engaged, Tried, No response, Skip — tap once per pick. No paperwork.</p>
           </article>
           <article class="feature-card">
-            <h3>Volunteer logging</h3>
-            <p>Track hand-raises alongside cold calls. Capture the full picture.</p>
+            <h3>Fair picks with cooldown</h3>
+            <p>Random selection that avoids back-to-back repeats. Everyone gets a turn.</p>
           </article>
           <article class="feature-card">
-            <h3>Equity mode</h3>
-            <p>Weighted toward students called less often. Fairness built in.</p>
+            <h3>Volunteer tracking</h3>
+            <p>Hands raised still count. Log them alongside cold calls for the full picture.</p>
           </article>
           <article class="feature-card">
-            <h3>Rounds + cooldown</h3>
-            <p>Everyone gets a turn before repeats. Protects quiet students.</p>
-          </article>
-          <article class="feature-card">
-            <h3>Scoring + tags</h3>
-            <p>Engaged, Tried, No response, Skip. Optional tags for nuance.</p>
-          </article>
-          <article class="feature-card">
-            <h3>Session summary</h3>
-            <p>Participation spread at a glance. See who engaged, who didn’t.</p>
-          </article>
-          <article class="feature-card">
-            <h3>History + analytics</h3>
-            <p>Today, 7 days, all time. Track trends over weeks.</p>
-          </article>
-          <article class="feature-card">
-            <h3>CSV export</h3>
-            <p>Export data for records, grades, or reports.</p>
-          </article>
-          <article class="feature-card">
-            <h3>Offline-first privacy</h3>
-            <p>Data stays on your device. No cloud sync required.</p>
+            <h3>Session insights</h3>
+            <p>Participation spread at a glance. See who’s missing before the bell.</p>
           </article>
         </div>
       </div>
@@ -132,49 +114,49 @@
     <section id="screenshots" class="screenshots" aria-labelledby="screenshots-heading">
       <div class="container">
         <h2 id="screenshots-heading">Screenshots</h2>
-        <p class="section-lead">A quick look at FairCall in action.</p>
+        <p class="screenshots-lead">A live session takes seconds.</p>
         <div class="screenshot-grid">
           <figure class="screenshot-item">
             <a href="assets/screen-1.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="Classes">
-              <img src="assets/screen-1.jpeg" alt="FairCall classes and greeting" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
+              <img src="assets/screen-1.jpeg" alt="FairCall classes" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
               <span class="screenshot-placeholder">screen-1.jpeg</span>
             </a>
-            <figcaption>Classes</figcaption>
+            <figcaption><span class="screenshot-label">Classes</span> — Your roster at a glance.</figcaption>
           </figure>
           <figure class="screenshot-item">
-            <a href="assets/screen-2.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="One-tap pick">
-              <img src="assets/screen-2.jpeg" alt="FairCall one-tap random pick" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
+            <a href="assets/screen-2.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="Live session">
+              <img src="assets/screen-2.jpeg" alt="FairCall live session" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
               <span class="screenshot-placeholder">screen-2.jpeg</span>
             </a>
-            <figcaption>One-tap pick</figcaption>
+            <figcaption><span class="screenshot-label">Live session</span> — Pick, log, repeat.</figcaption>
           </figure>
           <figure class="screenshot-item">
-            <a href="assets/screen-3.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="Scoring">
-              <img src="assets/screen-3.jpeg" alt="FairCall scoring: Engaged, Tried, No response, Skip" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
+            <a href="assets/screen-3.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="Participation tags">
+              <img src="assets/screen-3.jpeg" alt="FairCall participation tags" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
               <span class="screenshot-placeholder">screen-3.jpeg</span>
             </a>
-            <figcaption>Scoring</figcaption>
+            <figcaption><span class="screenshot-label">Participation tags</span> — Quick context without paperwork.</figcaption>
           </figure>
           <figure class="screenshot-item">
             <a href="assets/screen-4.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="Participation history">
-              <img src="assets/screen-4.jpeg" alt="FairCall participation history and analytics" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
+              <img src="assets/screen-4.jpeg" alt="FairCall participation history" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
               <span class="screenshot-placeholder">screen-4.jpeg</span>
             </a>
-            <figcaption>Participation history</figcaption>
+            <figcaption><span class="screenshot-label">Session summary</span> — See who's missing at a glance.</figcaption>
           </figure>
           <figure class="screenshot-item">
             <a href="assets/screen-5.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="Session settings">
-              <img src="assets/screen-5.jpeg" alt="FairCall session settings: pick mode, cooldown, rounds" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
+              <img src="assets/screen-5.jpeg" alt="FairCall session settings" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
               <span class="screenshot-placeholder">screen-5.jpeg</span>
             </a>
-            <figcaption>Session settings</figcaption>
+            <figcaption><span class="screenshot-label">Session settings</span> — Cooldown, rounds, pick mode.</figcaption>
           </figure>
           <figure class="screenshot-item">
             <a href="assets/screen-6.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="Start session">
-              <img src="assets/screen-6.jpeg" alt="FairCall class screen: Start session, Students, Participation history" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
+              <img src="assets/screen-6.jpeg" alt="FairCall start session" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
               <span class="screenshot-placeholder">screen-6.jpeg</span>
             </a>
-            <figcaption>Start session</figcaption>
+            <figcaption><span class="screenshot-label">Start session</span> — Pick students and log scores.</figcaption>
           </figure>
         </div>
       </div>
@@ -218,25 +200,25 @@
           <article class="pricing-card">
             <h3>Free</h3>
             <p class="price">$0</p>
+            <p class="pricing-tagline">Random picks + basic tracking</p>
             <ul class="pricing-features">
-              <li>Uniform random mode</li>
-              <li>Basic cooldown</li>
               <li>Unlimited classes</li>
+              <li>Cooldown to avoid repeats</li>
               <li>History (today, 7 days)</li>
             </ul>
-            <a href="#cta" class="btn btn-secondary btn-block">Get started</a>
+            <a href="#get" class="btn btn-secondary btn-block">Get started</a>
           </article>
           <article class="pricing-card pricing-card-pro">
             <span class="badge">Pro</span>
             <h3>Pro</h3>
             <p class="price">TBD</p>
+            <p class="pricing-tagline">Equity mode + insights</p>
             <ul class="pricing-features">
-              <li>Equity mode</li>
-              <li>Advanced analytics</li>
-              <li>CSV export</li>
-              <li>Session insights</li>
+              <li>Weighted toward less-called students</li>
+              <li>Full history, CSV export</li>
             </ul>
-            <a href="#cta" class="btn btn-primary btn-block">Get the app</a>
+            <p class="pricing-pro-note">Designed to reduce unintentional favoritism and broaden participation.</p>
+            <a href="#get" class="btn btn-primary btn-block">Try FairCall</a>
           </article>
         </div>
       </div>
@@ -278,11 +260,12 @@
       </div>
     </section>
 
-    <section id="cta" class="cta" aria-labelledby="cta-heading">
+    <section id="get" class="cta" aria-labelledby="cta-heading">
       <div class="container">
-        <h2 id="cta-heading">Make participation fair — without extra effort.</h2>
-        <p class="cta-sub">FairCall keeps the flow moving.</p>
-        <a href="#" class="btn btn-primary btn-large">Get the app</a>
+        <h2 id="cta-heading">Get FairCall</h2>
+        <p class="cta-sub">Fair participation, without slowing your lesson.</p>
+        <a href="mailto:hello@yourdomain.com?subject=FairCall%20inquiry" class="btn btn-primary btn-large">Try FairCall</a>
+        <p class="cta-note">Coming to Android soon. Contact us for early access.</p>
       </div>
     </section>
   </main>
