--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="site-header" role="banner">
     <div class="container header-inner">
       <a href="#" class="logo" aria-label="FairCall home">
-        <img src="assets/logo.png" alt="FairCall" width="58" height="58" class="logo-img">
+        <img src="assets/logo.png" alt="FairCall" width="52" height="52" class="logo-img">
       </a>
       <button type="button" class="nav-toggle" aria-label="Toggle menu" aria-expanded="false" aria-controls="main-nav">
         <span class="nav-toggle-bar"></span>
@@ -27,7 +27,7 @@
           <li><a href="#pricing">Pricing</a></li>
           <li><a href="#faq">FAQ</a></li>
         </ul>
-        <a href="#get" class="btn btn-primary nav-cta">Try FairCall</a>
+        <a href="#get" class="btn btn-primary nav-cta">Get the app</a>
       </nav>
     </div>
   </header>
@@ -230,31 +230,31 @@
         <dl class="faq-list">
           <div class="faq-item">
             <dt><button type="button" class="faq-question" aria-expanded="false" aria-controls="faq-1" id="faq-q1">Does it work offline?</button></dt>
-            <dd id="faq-1" class="faq-answer" aria-labelledby="faq-q1" hidden>Yes. FairCall is built offline-first. No Wi‑Fi needed in the classroom.</dd>
+            <dd id="faq-1" class="faq-answer" aria-labelledby="faq-q1" aria-hidden="true"><span class="faq-answer-inner">Yes. FairCall is built offline-first. No Wi‑Fi needed in the classroom.</span></dd>
           </div>
           <div class="faq-item">
             <dt><button type="button" class="faq-question" aria-expanded="false" aria-controls="faq-2" id="faq-q2">Does it store student data in the cloud?</button></dt>
-            <dd id="faq-2" class="faq-answer" aria-labelledby="faq-q2" hidden>No. Data stays on your device. We don’t sync participation to any server.</dd>
+            <dd id="faq-2" class="faq-answer" aria-labelledby="faq-q2" aria-hidden="true"><span class="faq-answer-inner">No. Data stays on your device. We don’t sync participation to any server.</span></dd>
           </div>
           <div class="faq-item">
             <dt><button type="button" class="faq-question" aria-expanded="false" aria-controls="faq-3" id="faq-q3">What’s Equity mode?</button></dt>
-            <dd id="faq-3" class="faq-answer" aria-labelledby="faq-q3" hidden>Equity mode weights the random pick toward students who have been called less often. It balances participation over time.</dd>
+            <dd id="faq-3" class="faq-answer" aria-labelledby="faq-q3" aria-hidden="true"><span class="faq-answer-inner">Equity mode weights the random pick toward students who have been called less often. It balances participation over time.</span></dd>
           </div>
           <div class="faq-item">
             <dt><button type="button" class="faq-question" aria-expanded="false" aria-controls="faq-4" id="faq-q4">Will it slow down teaching?</button></dt>
-            <dd id="faq-4" class="faq-answer" aria-labelledby="faq-q4" hidden>No. One-tap pick and fast logging keep the flow moving. It’s designed for in-session use.</dd>
+            <dd id="faq-4" class="faq-answer" aria-labelledby="faq-q4" aria-hidden="true"><span class="faq-answer-inner">No. One-tap pick and fast logging keep the flow moving. It’s designed for in-session use.</span></dd>
           </div>
           <div class="faq-item">
             <dt><button type="button" class="faq-question" aria-expanded="false" aria-controls="faq-5" id="faq-q5">Can I export data?</button></dt>
-            <dd id="faq-5" class="faq-answer" aria-labelledby="faq-q5" hidden>Yes. Pro includes CSV export for participation records, grading, or reports.</dd>
+            <dd id="faq-5" class="faq-answer" aria-labelledby="faq-q5" aria-hidden="true"><span class="faq-answer-inner">Yes. Pro includes CSV export for participation records, grading, or reports.</span></dd>
           </div>
           <div class="faq-item">
             <dt><button type="button" class="faq-question" aria-expanded="false" aria-controls="faq-6" id="faq-q6">Android and iOS?</button></dt>
-            <dd id="faq-6" class="faq-answer" aria-labelledby="faq-q6" hidden>Android is the initial focus. iOS availability is TBD. Check back for updates.</dd>
+            <dd id="faq-6" class="faq-answer" aria-labelledby="faq-q6" aria-hidden="true"><span class="faq-answer-inner">Android is the initial focus. iOS availability is TBD. Check back for updates.</span></dd>
           </div>
           <div class="faq-item">
             <dt><button type="button" class="faq-question" aria-expanded="false" aria-controls="faq-7" id="faq-q7">How do I reset or edit students?</button></dt>
-            <dd id="faq-7" class="faq-answer" aria-labelledby="faq-q7" hidden>From the class roster, you can add, edit, or remove students. Session history stays intact unless you clear it.</dd>
+            <dd id="faq-7" class="faq-answer" aria-labelledby="faq-q7" aria-hidden="true"><span class="faq-answer-inner">From the class roster, you can add, edit, or remove students. Session history stays intact unless you clear it.</span></dd>
           </div>
         </dl>
       </div>
