--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="hero-visual">
           <div class="phone-frame">
-            <img src="assets/screen-2.jpeg" alt="FairCall live session — one-tap pick" width="280" height="560" loading="eager">
+            <img src="assets/pickingastudentfeaturee.jpeg" alt="FairCall live session — one-tap pick" width="280" height="560" loading="eager">
           </div>
         </div>
       </div>
@@ -121,7 +121,7 @@
           </div>
           <div class="feature-img">
             <div class="phone-frame phone-frame-sm">
-              <img src="assets/screen-2.jpeg" alt="FairCall — one-tap random pick" loading="lazy" width="200" height="400">
+              <img src="assets/pickingastudentfeaturee.jpeg" alt="FairCall — one-tap random pick" loading="lazy" width="200" height="400">
             </div>
           </div>
         </div>
@@ -133,7 +133,7 @@
           </div>
           <div class="feature-img">
             <div class="phone-frame phone-frame-sm">
-              <img src="assets/screen-3.jpeg" alt="FairCall — participation tags" loading="lazy" width="200" height="400">
+              <img src="assets/scoringachosenstudentfeature.jpeg" alt="FairCall — scoring a chosen student" loading="lazy" width="200" height="400">
             </div>
           </div>
         </div>
@@ -145,7 +145,7 @@
           </div>
           <div class="feature-img">
             <div class="phone-frame phone-frame-sm">
-              <img src="assets/screen-4.jpeg" alt="FairCall — participation history" loading="lazy" width="200" height="400">
+              <img src="assets/participationhistoryfeature.jpeg" alt="FairCall — participation history" loading="lazy" width="200" height="400">
             </div>
           </div>
         </div>
@@ -188,46 +188,46 @@
         </div>
         <div class="screenshot-grid">
           <figure class="screenshot-item fade-up">
-            <a href="assets/screen-1.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="Classes">
-              <img src="assets/screen-1.jpeg" alt="FairCall classes" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
-              <span class="screenshot-placeholder">screen-1.jpeg</span>
+            <a href="assets/pickingastudentfeaturee.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="Picking a student">
+              <img src="assets/pickingastudentfeaturee.jpeg" alt="FairCall — picking a student at random" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
+              <span class="screenshot-placeholder">pickingastudentfeaturee.jpeg</span>
             </a>
-            <figcaption><strong>Classes</strong> — Your roster at a glance.</figcaption>
+            <figcaption><strong>Pick</strong> — One tap to choose a student.</figcaption>
           </figure>
           <figure class="screenshot-item fade-up">
-            <a href="assets/screen-2.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="Live session">
-              <img src="assets/screen-2.jpeg" alt="FairCall live session" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
-              <span class="screenshot-placeholder">screen-2.jpeg</span>
+            <a href="assets/scoringachosenstudentfeature.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="Scoring a student">
+              <img src="assets/scoringachosenstudentfeature.jpeg" alt="FairCall — scoring a chosen student" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
+              <span class="screenshot-placeholder">scoringachosenstudentfeature.jpeg</span>
             </a>
-            <figcaption><strong>Live session</strong> — Pick, log, repeat.</figcaption>
+            <figcaption><strong>Score</strong> — Engaged, Tried, No response, Skip.</figcaption>
           </figure>
           <figure class="screenshot-item fade-up">
-            <a href="assets/screen-3.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="Participation tags">
-              <img src="assets/screen-3.jpeg" alt="FairCall participation tags" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
-              <span class="screenshot-placeholder">screen-3.jpeg</span>
+            <a href="assets/participationhistoryfeature.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="Participation history">
+              <img src="assets/participationhistoryfeature.jpeg" alt="FairCall — participation history and analytics" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
+              <span class="screenshot-placeholder">participationhistoryfeature.jpeg</span>
             </a>
-            <figcaption><strong>Tags</strong> — Quick context, no paperwork.</figcaption>
+            <figcaption><strong>History</strong> — Who's missing at a glance.</figcaption>
           </figure>
           <figure class="screenshot-item fade-up">
-            <a href="assets/screen-4.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="Participation history">
-              <img src="assets/screen-4.jpeg" alt="FairCall participation history" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
-              <span class="screenshot-placeholder">screen-4.jpeg</span>
+            <a href="assets/sessinsettingsfeature.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="Session settings">
+              <img src="assets/sessinsettingsfeature.jpeg" alt="FairCall — session settings: pick mode, cooldown, rounds" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
+              <span class="screenshot-placeholder">sessinsettingsfeature.jpeg</span>
             </a>
-            <figcaption><strong>Summary</strong> — Who's missing at a glance.</figcaption>
+            <figcaption><strong>Session settings</strong> — Mode, cooldown, rounds.</figcaption>
           </figure>
           <figure class="screenshot-item fade-up">
-            <a href="assets/screen-5.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="Session settings">
-              <img src="assets/screen-5.jpeg" alt="FairCall session settings" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
-              <span class="screenshot-placeholder">screen-5.jpeg</span>
+            <a href="assets/exportfeautre.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="CSV export">
+              <img src="assets/exportfeautre.jpeg" alt="FairCall — CSV export options" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
+              <span class="screenshot-placeholder">exportfeautre.jpeg</span>
             </a>
-            <figcaption><strong>Settings</strong> — Mode, cooldown, rounds.</figcaption>
+            <figcaption><strong>Export</strong> — Raw events or aggregated data.</figcaption>
           </figure>
           <figure class="screenshot-item fade-up">
-            <a href="assets/screen-6.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="Class screen">
-              <img src="assets/screen-6.jpeg" alt="FairCall class screen" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
-              <span class="screenshot-placeholder">screen-6.jpeg</span>
+            <a href="assets/settingsfeature.jpeg" class="screenshot-link" data-lightbox="screenshots" data-caption="App settings">
+              <img src="assets/settingsfeature.jpeg" alt="FairCall — app settings and privacy" loading="lazy" width="280" height="560" onerror="this.style.display='none'; this.nextElementSibling.classList.add('visible');">
+              <span class="screenshot-placeholder">settingsfeature.jpeg</span>
             </a>
-            <figcaption><strong>Class</strong> — Start session, manage students.</figcaption>
+            <figcaption><strong>Settings</strong> — Profile, Pro mode, privacy.</figcaption>
           </figure>
         </div>
       </div>
